# crabvid

./: .gitignore  Cargo.toml  build.rs
src/: constants.rs  main.rs  pallette_gen.rs  post_processing.rs  screenshotting.rs  ui.rs
src/post_processing/: gif.rs  mod.rs  mp4.rs
src/ui/: mod.rs  ui_coordinates.c  ui_coordinates.h  ui_darwin.h  ui_darwin.m  ui_windows.rs
