[package]
name = "crabvid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.66.1"
cc = "1.0.79"

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
fast_image_resize = "2.7.3"
gif = "0.12.0"
screenshots = { git = "https://github.com/IAmJSD/screenshots-rs" }

[dependencies.windows]
version = "0.48"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
]
